--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-h2{
-    color: #FFFCF2;
-    color:#ccc5b9;
-    color: #403d39;
-    color: #252422;
-    color:#eb5e28;
-}
 
 body{
     font-family: 'Roboto', sans-serif;
@@ -36,6 +29,7 @@ input[type="textbar"]{
 section{
     width: 90%;
     margin: 0 auto;
+    display: inline-grid;
 }
 
 h3{
@@ -48,8 +42,17 @@ h3{
     display: none;
 }
 
+/* Movie */
 .movie-card{
-    margin-top: -20px;
+    display: inline-block;
+    margin: 1em;
+    width: 10em;
+    height: 15em;
+}
+
+#movie-poster img{
+    width: 100%;
+    height: 100%;
 }
 
 #searchForm{
@@ -61,6 +64,13 @@ h3{
     border-radius: 30%;
 }
 
+#clearBtn{
+    padding: 5px 10px;
+    border-radius: 0.5em;
+    background-color: #ced4da;
+    color: black;
+}
+
 #searchBtn{
     padding: 5px 10px;
     border-radius: 0.5em;
@@ -68,20 +78,14 @@ h3{
     color: black;
 }
 
-#searchBtn:hover, #nowPlayingBtn:hover{
+#searchBtn:hover, #nowPlayingBtn:hover, #clearBtn:hover{
     border-color: #eb5e28;
     color: black;
     box-shadow: 0 0.5em 0.5em -0.4em #eb5e28;
     transform: translateY(-0.25em);
     cursor: pointer;
 }
-/* #movie-poster img{
-width: 200px;
-height: 250px;
-} */
+ 
 
-.movie-card{
-display: inline-block;
-} 
 
 
